--- a/CMS_APP/Views/Shared/_Layout.cshtml
+++ b/CMS_APP/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="index.html">
+                        <a href="@Url.Action("HomePage","Home")">
                             <img class="img-fluid" src="~/images/TechcronusLogo.png" alt="Theme-Logo" />
                         </a>
                         <a class="mobile-options waves-effect waves-light">
@@ -145,7 +145,7 @@
                             </li>
                         </ul>
                         <ul class="nav-right">
-                            <li class="header-notification">
+                            @*<li class="header-notification">
                                 <a href="#!" class="waves-effect waves-light">
                                     <i class="ti-bell"></i>
                                     <span class="badge bg-c-red"></span>
@@ -186,7 +186,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </li>
+                            </li>*@
                             <li class="user-profile header-notification">
                                 <a href="#!" class="waves-effect waves-light">
                                     <img src="~/images/faq_man.png" class="img-radius" alt="User-Profile-Image">
